# discord-bot

./: .gitignore  Cargo.toml  README.md  REMBG_SETUP.md  build-sensitive.default.sh  build.sh  deploy.sh  signal-download-models.sh  signal-reregister-commands.sh
.cargo/: config.toml
proc_macros/: Cargo.toml
proc_macros/src/: define_field_names.rs  lib.rs
src/: assets.rs  error.rs  main.rs  state.rs
src/commands/: README.md  ahoy.rs  blp.rs  icon.rs  mod.rs  png.rs  rembg.rs
src/db/: blp_queue.rs  heartbeat.rs  mod.rs  mongo.rs  rate_limits.rs  rembg_queue.rs  session_events.rs  session_limits.rs  state.rs
src/discord/: api.rs  discord.rs  gateway.rs  mod.rs  send_message.rs
src/discord/handle/: message.rs
src/discord/message/: attachment.rs  handle.rs  message.rs  mod.rs  send.rs
src/types/: discord.rs
src/workers/: blp_processor.rs  mod.rs  processor.rs  queue.rs  rembg_processor.rs
src/workers/blp/: handle.rs  job.rs  mod.rs  processor.rs
src/workers/icon/: handle.rs  job.rs  mod.rs  processor.rs
src/workers/rembg/: handle.rs  job.rs  mod.rs  processor.rs  processor1.rs
