[package]
name = "discord-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
blp = "0.1.32"
bson = { version = "3.0.0", features = ["chrono-0_4", "serde", "serde_with-3"] }
chrono = { version = "0.4.42", features = ["serde"] }
futures-util = "0.3.31"
image = "0.25"
mongodb = "3.2.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.15.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
url = "2.5.7"
uuid = { version = "1.11.0", features = ["v4"] }
