[workspace]
members = [
    "proc_macros",
]

[package]
name = "discord-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
proc_macros = { path = "./proc_macros" }
#blp = "0.1.36"
blp = { path = "../blp-rs" }
bson = { version = "3.0.0", features = ["chrono-0_4", "serde_with-3"] }
chrono = { version = "0.4.42", features = ["serde"] }
futures-util = "0.3.31"
image = "0.25.8"
mongodb = { version = "3.3.0", features = ["bson-3"] }
#rembg-rs = "0.1.2"
rembg-rs = { path = "../rembg-rs" }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.15.1"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }
zip = "6.0.0"
once_cell = "1.21.3"
dashmap = "7.0.0-rc2"
async-trait = "0.1.89"
bytes = "1.10.1"